--- a/apps/extension/src/assets/_locales/zh-TW/translation.json
+++ b/apps/extension/src/assets/_locales/zh-TW/translation.json
@@ -23,8 +23,8 @@
   "extName": "漢字注音器",
   "fieldDomain": "領域",
   "fieldSelector": "選擇器",
-  "footerBuiltWith": "使用<工具/>❤️建造。",
-  "footerCopyright": "版權所有 © {{yearsRange}} <作者/>。",
+  "footerBuiltWith": "使用<tool/>建造❤️。",
+  "footerCopyright": "版權所有 © {{yearsRange}} <author/>。",
   "footerLicense": "根據 <license/> 許可證發布。",
   "iGotIt": "我得到了它！",
   "labelAdjustFont": "調整注音字體大小",
@@ -35,12 +35,12 @@
   "markActive": "積極的",
   "markInactive": "不活躍",
   "messageEmptyList": "列表為空，請先新增。",
-  "msgCssSelector": "<code/> 欄位使用 <link/> 語法來指定要在頁面上標記的元素。",
+  "msgCssSelector": "<boldSelectorField/> 欄位使用 <mdnCssSelectorLink/> 語法來指定要在頁面上標記的元素。",
   "msgDeleteRule": "刪除規則不可撤銷，確定嗎？",
   "msgDoNotModify": "如果您不熟悉 CSS 選擇器語法，請不要修改此字段，因為這可能會使擴充功能無效。",
   "msgImportConfig": "這將覆蓋現有的配置文件，並且此操作不可撤消，確定嗎？",
   "msgNotFound": "請新增規則，或匯入現有設定檔（JSON 格式），否則此擴充將不會執行任何操作。",
-  "msgSelectorMerge": "<codeSelector/>欄位之間以逗號分隔，相同<codeDomain/>對應的選擇器將直接合併。",
+  "msgSelectorMerge": "<boldSelectorField/>欄位之間以逗號分隔，相同<boldCodeField/>對應的選擇器將直接合併。",
   "navChangelog": "變更日誌",
   "navSelector": "選擇器",
   "navManageShortcuts": "管理快捷方式",
@@ -74,10 +74,10 @@
   "sidebarSponsor": "贊助開發商",
   "srGithub": "GitHub 儲存庫",
   "srToggleSidebar": "切換側邊欄顯示/隱藏",
-  "tipFilterLevel": "等級為JLPT N4和N5",
+  "tipFilterLevel": "預設等級為N4和N5",
   "tipOpenIssue": "在 GitHub 上開啟問題",
   "tipOpenOptions": "開啟選項頁面",
-  "tipRefreshPage": "請重新整理頁面",
+  "tipRefreshPage": "請重新整理網頁",
   "tipShareOn": "在 {{media}} 上分享",
   "titleEditor": "使用者規則編輯器",
   "titleEditSelectorDialog": "{{verbs}} 您的自訂規則",
@@ -112,5 +112,7 @@
   "validationPureKanji": "必須是純粹的日本漢字。",
   "validationPureKatakana": "必須是純粹的片假名。",
   "validationRequired": "必需的。",
-  "fieldKanji": "漢字"
+  "fieldKanji": "漢字",
+  "fieldDomainDesc1": "請單擊瀏覽器地址欄以確認“<boldWwwDot/>”前綴是否隱藏。如果有，您也必須輸入它，否則此功能無法正常工作。",
+  "fieldDomainDesc2": "將自動刪除“<boldHttpsPrefix/>”前綴。"
 }
