perf: significantly improve the loading speed of Popup and Options pages (#364)
* chore: add zustand dep

* perf: eliminate slow loading experience of settings page

* chore: remove useless code

* perf: eliminate slow loading experience of selectors page

* perf: eliminate the initial loading effect of the selector list

* perf: eliminate the initial loading effect of the kanji filter list

* perf:  eliminate the initial loading effect of the Popup page

* fix: missing "key"

* refactor: use ES2024 toSpliced and with methods

* fix: quick create function is invalid

* fix: files with yomikatas key undefined cannot be imported

* fix: kanji filters import function does not work

* refactor: remove useless code

* chore: fix e2e test

--- a/apps/extension/src/assets/_locales/ja/translation.json
+++ b/apps/extension/src/assets/_locales/ja/translation.json
@@ -39,7 +39,7 @@
   "srGithub": "GitHub リポジトリ",
   "srToggleTheme": "テーマモードの切り替え",
   "titleWarning": "警告！",
-  "msgImportConfig": "これにより既存の設定ファイルが上書きされ、この操作は元に戻せません。よろしいですか？",
+  "msgImportSelectorConfig": "これにより既存の設定ファイルが上書きされ、この操作は元に戻せません。よろしいですか？",
   "btnConfirmConfig": "インポート",
   "btnCancel": "キャンセル",
   "warningInvalid": "無効なJSON形式",
@@ -91,12 +91,12 @@
   "btnResetConfig": "設定をリセット",
   "resetWarning": "ルールリストを初期状態にリセットしてもよろしいですか?",
   "undoneDesc": "この操作は元に戻すことができません。",
-  "btnAddKatakana": "カタカナを追加します",
+  "btnAddKatakana": "片仮名を追加します",
   "btnClearConfig": "設定をクリア",
   "btnConfirm": "確認する",
   "btnQuickCreate": "クイック作成",
   "clearConfigDialogTitle": "ルールリストをクリアしたいですか？",
-  "createKanjiFilterDialogDesc1": "ブラウザのWeb検索ツールを使用して、特定の漢字または読み方を検索し、ボタンをクリックして編集を開始します。\nまた、読み方はカタカナ形式である必要があります。ロマジーまたはヒラガナは受け入れられません。",
+  "createKanjiFilterDialogDesc1": "ブラウザのWeb検索ツールを使用して、特定の漢字または読み方を検索し、ボタンをクリックして編集を開始します。\nまた、読み方は片仮名形式である必要があります。ロマジーまたはヒラガナは受け入れられません。",
   "createKanjiFilterDialogDesc2": "「すべて」モードは、読み方フィールドと共存できません。\nこのモードに切り替えると、元の読み方フィールドがクリアされ、取得できません。",
   "createKanjiFilterDialogTitle": "漢字フィルターの使用方法は？",
   "fieldMatchAll": "すべて",
@@ -105,14 +105,21 @@
   "msgDeleteKanjiFilterDesc": "「{{kanji}}」に対応する漢字フィルターを削除します。",
   "navKanjiFilter": "漢字フィルター",
   "quickCreateModalDesc1": "スペースやラインブレークで分離してください。\n多数の漢字の言葉を入力すると、対応する漢字フィルターがあなたのために自動作成されます。",
-  "quickCreateModalDesc2": "非純粋な漢字の言葉はフィルタリングされます。\n入力漢字が既に読み方をシステムに記録している場合、対応する読み方はクリアされ、「すべて」モードに置き換えられます。",
+  "quickCreateModalDesc2": "不純な漢字の言葉はフィルタリングされます。\n入力漢字が既に読み方をシステムに記録している場合、対応する読み方はクリアされ、「すべて」モードに置き換えられます。",
   "quickCreateModalTitle": "バッチカンジフィルターをすばやく作成します",
   "titleKanjiFilterEditor": "{{verbs}}漢字フィルター",
   "validationNonRepetitiveKanji": "この漢字はすでに使用されています。",
-  "validationPureKanji": "純粋な日本の漢字でなければなりません。",
-  "validationPureKatakana": "純粋なカタカナでなければなりません。",
+  "validationPureKanji": "純粋な漢字でなければなりません。",
+  "validationPureKatakana": "純粋な片仮名でなければなりません。",
   "validationRequired": "必須。",
   "fieldKanji": "漢字",
   "fieldDomainDesc1": "ブラウザアドレスバーをクリックして、「<boldWwwDot/>」プレフィックスが隠されていることを確認してください。\nもしそうなら、あなたもそれを入力する必要があります。そうしないと、この機能は正しく機能しません。",
-  "fieldDomainDesc2": "「<boldHttpsPrefix/>」プレフィックスは自動的に削除されます。"
+  "fieldDomainDesc2": "「<boldHttpsPrefix/>」プレフィックスは自動的に削除されます。",
+  "importFailedCauseByDuplicatedKanjis": "重複した漢字：{{kanjis}}。",
+  "importFailedCauseByExistedKanjis": "存在した漢字：{{kanjis}}。",
+  "importFailedCauseByImpureKanjis": "不純な漢字：{{kanjis}}。",
+  "importFailedCauseByImpureKatakanas": "不純な片仮名：{{katakanas}}。",
+  "kanjiFilterImportFailedTip": "次のテキストが存在するため、インポートは失敗しました。",
+  "msgImportKanjiFilterConfig": "この操作は「追加」であり、既存のルールを上書きしません。お気軽に操作してください。上書きしたい場合は、最初にクリアしてください。",
+  "titleNote": "注記"
 }
