--- a/apps/extension/src/assets/_locales/en/translation.json
+++ b/apps/extension/src/assets/_locales/en/translation.json
@@ -39,7 +39,9 @@
   "srGithub": "GitHub repository",
   "srToggleTheme": "Toggle Theme Mode",
   "titleWarning": "Warning!",
-  "msgImportConfig": "This will overwrite the existing configuration file and this action is not undoable, sure about this?",
+  "msgImportSelectorConfig": "This will overwrite the existing configuration file and this action is not undoable, sure about this?",
+  "titleNote": "Note",
+  "msgImportKanjiFilterConfig": "This operation is \"append\" and will not overwrite your existing rules. Please feel free to operate. If you want to overwrite, please clear it first.",
   "btnConfirmConfig": "Import",
   "btnCancel": "Cancel",
   "warningInvalid": "Invalid JSON format",
@@ -114,5 +116,10 @@
   "inputProhibitedTip": "Input is prohibited.",
   "fieldKanji": "Kanji",
   "fieldDomainDesc1": "Please click the browser address bar to confirm that the \"<boldWwwDot/>\" prefix is hidden. If it is, you must enter it as well, otherwise this feature will not work properly.",
-  "fieldDomainDesc2": "The \"<boldHttpsPrefix/>\" prefix will be automatically removed."
+  "fieldDomainDesc2": "The \"<boldHttpsPrefix/>\" prefix will be automatically removed.",
+  "kanjiFilterImportFailedTip": "Import failed due to the presence of the following text.",
+  "importFailedCauseByExistedKanjis": "Existed kanjis: {{kanjis}}.",
+  "importFailedCauseByDuplicatedKanjis": "Duplicated kanjis: {{kanjis}}.",
+  "importFailedCauseByImpureKanjis": "Impure kanjis: {{kanjis}}.",
+  "importFailedCauseByImpureKatakanas": "Impure katakanas: {{katakanas}}."
 }
