feat: enhanced validation and error handling for domain and selector inputs (#376)
* chore: update wxt version to 0.20.8

* chore: adjust button order

* refactor: extract component and simplify component logic

* refactor: extract components

* feat: adjust button size

* feat: form uniqueness validation logic error

* feat: remove redundant prompt information

* fix: uniqueness check error in update mode

* refactor: simplify validation logic

* chore: remove useless CSS

* feat: allows editing of the domain field of an existing rule

* fix: domain field containing wildcard characters should not be rendered as a link

* feat: optimize copywriting

* feat: strengthen the validation rules for imported files and simplify the import process

* chore: remove useless dep

* chore: fix i18n key

* chore: adjust button order

--- a/apps/extension/src/assets/_locales/en/translation.json
+++ b/apps/extension/src/assets/_locales/en/translation.json
@@ -39,9 +39,8 @@
   "srGithub": "GitHub repository",
   "srToggleTheme": "Toggle Theme Mode",
   "titleWarning": "Warning!",
-  "msgImportSelectorConfig": "This will overwrite the existing configuration file and this action is not undoable, sure about this?",
   "titleNote": "Note",
-  "msgImportKanjiFilterConfig": "This operation is \"append\" and will not overwrite your existing rules. Please feel free to operate. If you want to overwrite, please clear it first.",
+  "msgImportConfig": "This operation is \"append\" and will not overwrite your existing rules. Please feel free to operate. If you want to overwrite, please clear it first.",
   "btnConfirmConfig": "Import",
   "btnCancel": "Cancel",
   "warningInvalid": "Invalid JSON format",
@@ -51,7 +50,6 @@
   "disclosureSelector": "What is selector field?",
   "msgCssSelector": "The <boldSelectorField/> field uses the <mdnCssSelectorLink/> syntax to specify the element to be tagged on the page.",
   "msgDoNotModify": "If you are not familiar with the CSS selector syntax, please do not modify this field, as this may invalidate the extension.",
-  "msgSelectorMerge": "The <boldSelectorField/> field are separated by comma, and selectors corresponding to the same <boldCodeField/> will be merged directly.",
   "cssSelector": "CSS Selector",
   "fieldSelector": "selector",
   "fieldDomain": "domain",
@@ -118,9 +116,13 @@
   "fieldDomainDesc1": "Please click the browser address bar to confirm that the \"<boldWwwDot/>\" prefix is hidden. If it is, you must enter it as well, otherwise this feature will not work properly.",
   "fieldDomainDesc2": "The \"<boldHttpsPrefix/>\" prefix will be automatically removed.",
   "fieldDomainDesc3": "Supports wildcard patterns — e.g. <boldExampleGlobExpr/> (does not match example.com).",
-  "kanjiFilterImportFailedTip": "Import failed due to the presence of the following text.",
+  "importFailedTip": "Import failed due to the presence of the following text.",
   "importFailedCauseByExistedKanjis": "Existed kanjis: {{kanjis}}.",
   "importFailedCauseByDuplicatedKanjis": "Duplicated kanjis: {{kanjis}}.",
   "importFailedCauseByImpureKanjis": "Impure kanjis: {{kanjis}}.",
-  "importFailedCauseByImpureKatakanas": "Impure katakanas: {{katakanas}}."
+  "importFailedCauseByImpureKatakanas": "Impure katakanas: {{katakanas}}.",
+  "validationNonRepetitiveDomain": "This domain is already in use.",
+  "disclosureDomain": "What is domain field?",
+  "importFailedCauseByExistedDomain": "Existed domains: {{domains}}.",
+  "importFailedCauseByDuplicatedDomains": "Duplicated domains: {{domains}}."
 }
