--- a/apps/extension/src/assets/_locales/ja/translation.json
+++ b/apps/extension/src/assets/_locales/ja/translation.json
@@ -39,7 +39,6 @@
   "srGithub": "GitHub リポジトリ",
   "srToggleTheme": "テーマモードの切り替え",
   "titleWarning": "警告！",
-  "msgImportSelectorConfig": "これにより既存の設定ファイルが上書きされ、この操作は元に戻せません。よろしいですか？",
   "btnConfirmConfig": "インポート",
   "btnCancel": "キャンセル",
   "warningInvalid": "無効なJSON形式",
@@ -49,7 +48,6 @@
   "disclosureSelector": "選択フィールドとは？",
   "msgCssSelector": "<boldSelectorField/> フィールドは、ページ上の要素を指定するために <mdnCssSelectorLink/> 構文を使用します。",
   "msgDoNotModify": "CSSセレクタ構文に慣れていない場合、このフィールドを変更しないでください。拡張機能が無効になる可能性があります。",
-  "msgSelectorMerge": "<boldSelectorField/> フィールドはカンマで区切られており、同じ <boldCodeField/> に対応するセレクタが直接マージされます。",
   "cssSelector": "CSSセレクタ",
   "fieldSelector": "セレクタ",
   "fieldDomain": "ドメイン名",
@@ -120,7 +118,11 @@
   "importFailedCauseByExistedKanjis": "存在した漢字：{{kanjis}}。",
   "importFailedCauseByImpureKanjis": "不純な漢字：{{kanjis}}。",
   "importFailedCauseByImpureKatakanas": "不純な片仮名：{{katakanas}}。",
-  "kanjiFilterImportFailedTip": "次のテキストが存在するため、インポートは失敗しました。",
-  "msgImportKanjiFilterConfig": "この操作は「追加」であり、既存のルールを上書きしません。お気軽に操作してください。上書きしたい場合は、最初にクリアしてください。",
-  "titleNote": "注記"
+  "importFailedTip": "次のテキストが存在するため、インポートは失敗しました。",
+  "msgImportConfig": "この操作は「追加」であり、既存のルールを上書きしません。お気軽に操作してください。上書きしたい場合は、最初にクリアしてください。",
+  "titleNote": "注記",
+  "validationNonRepetitiveDomain": "このドメインはすでに使用されています。",
+  "disclosureDomain": "ドメインフィールドとは？",
+  "importFailedCauseByExistedDomain": "存在したドメイン：{{domains}}。",
+  "importFailedCauseByDuplicatedDomains": "重複したドメイン：{{domains}}。"
 }
