--- a/apps/extension/src/assets/_locales/zh-CN/translation.json
+++ b/apps/extension/src/assets/_locales/zh-CN/translation.json
@@ -39,17 +39,15 @@
   "srGithub": "GitHub 仓库",
   "srToggleTheme": "切换主题模式",
   "titleWarning": "警告！",
-  "msgImportSelectorConfig": "这将覆盖现有的配置文件且此操作不可撤销，确定要这样做吗？",
   "btnConfirmConfig": "导入",
   "btnCancel": "取消",
   "warningInvalid": "无效的 JSON 格式",
   "iGotIt": "我知道了！",
   "titleNotFound": "未找到规则",
   "msgNotFound": "请添加新规则，或导入现有的配置文件（JSON 格式），否则此扩展将不执行任何操作。",
-  "disclosureSelector": "什么是选择器字段？",
+  "disclosureSelector": "选择器字段如何使用？",
   "msgCssSelector": "<boldSelectorField/> 字段使用 <mdnCssSelectorLink/> 语法来指定页面上的标记元素。",
   "msgDoNotModify": "如果您不熟悉 CSS 选择器语法，请不要修改此字段，因为这可能会使扩展失效。",
-  "msgSelectorMerge": "<boldSelectorField/> 字段用逗号分隔，对应同一 <boldCodeField/> 的选择器将直接合并。",
   "cssSelector": "CSS 选择器",
   "fieldSelector": "选择器",
   "fieldDomain": "域名",
@@ -120,7 +118,11 @@
   "importFailedCauseByExistedKanjis": "存在的汉字：{{kanjis}}。",
   "importFailedCauseByImpureKanjis": "不纯净的汉字：{{kanjis}}。",
   "importFailedCauseByImpureKatakanas": "不纯净的片假名：{{katakanas}}。",
-  "kanjiFilterImportFailedTip": "由于以下文本的存在，导入失败。",
-  "msgImportKanjiFilterConfig": "此操作为“追加”模式，不会覆盖您的现有规则。\n请随意操作。\n如果您想覆盖配置，请先清除原有配置。",
-  "titleNote": "注意"
+  "importFailedTip": "由于以下文本的存在，导入失败。",
+  "msgImportConfig": "此操作为“追加”模式，不会覆盖您的现有规则。\n请随意操作。\n如果您想覆盖配置，请先清除原有配置。",
+  "titleNote": "注意",
+  "validationNonRepetitiveDomain": "这个域名已经在使用。",
+  "disclosureDomain": "域名字段如何使用？",
+  "importFailedCauseByExistedDomain": "存在的域名：{{domains}}。",
+  "importFailedCauseByDuplicatedDomains": "重复的域名：{{domains}}。"
 }
