--- a/apps/extension/src/assets/_locales/zh-TW/translation.json
+++ b/apps/extension/src/assets/_locales/zh-TW/translation.json
@@ -15,7 +15,7 @@
   "btnSelectColor": "選擇顏色",
   "create": "創造",
   "cssSelector": "CSS選擇器",
-  "dialogExcludeTitle": "排除域",
+  "dialogAddDomainDialogTitle": "添加域",
   "disclosureSelector": "選擇器欄位如何使用？",
   "errorPageGoBack": "回首頁",
   "errorPageTip": "抱歉，發生了意外錯誤。",
@@ -124,5 +124,8 @@
   "validationNonRepetitiveDomain": "這個域名已經在使用。",
   "disclosureDomain": "域名欄位如何使用？",
   "importFailedCauseByExistedDomain": "存在的域名：{{domains}}。",
-  "importFailedCauseByDuplicatedDomains": "重複的域名：{{domains}}。"
+  "importFailedCauseByDuplicatedDomains": "重複的域名：{{domains}}。",
+  "clearDomainDialogTitle": "確定要清除所有網域嗎？",
+  "settingsAlwaysRunList": "以下網站將永遠在自動模式下執行",
+  "settingsAlwaysRunListDesc": "這些網站不會顯示「頁面過大」的警告。此設定的優先級低於「永不加入」清單。"
 }
